[package]
name = "everlong"
version = "0.3.0"
edition = "2021"
authors = ["n01e0 <reoshiseki@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/n01e0/everlong"
description = "notify when command exited"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.35", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
tokio = { version = "1.43.0", features = ["full"] }
